tests/NormalTests/paczka1/small_fuzzy/89647469.err
Error in line 6: 1edHQDQHlq A133 72,8
Error in line 7: 1edHQDQHlq S138 41,0
Error in line 9: 1edHQDQHlq A133 38,0
